# Novamene

./: CMakeLists.txt  README.md  novamene.cpp
bf/: counter_vector.cpp  counter_vector.hpp  hash.hpp
bf/bloom_filter/: a2.cpp  bitwise.cpp  counting.cpp  counting.hpp  stable.cpp
debug/: debug_cumulative.csv  debug_hourly.csv
helpers/: deletetx.h  helper.h  primitives.h  uint256.h  utilstrencodings.h
